working on more data structures